site/api/4.04/index_modules.md
<!-- ((! set title API !)) ((! set documentation !)) ((! set api !)) ((! set nobreadcrumb !)) -->
<div class="api"><header><nav class="toc brand"><a class="brand" href="https://ocaml.org/"><img src="colour-logo-gray.svg" class="svg" alt="OCaml"></a></nav><nav class="toc"><div class="toc_version"><a href="/docs" id="version-select">API Version 4.04</a></div><a href="index.html">&lt; General Index</a><div class="api_search"><input type="text" name="apisearch" id="api_search" oninput="mySearch(false);" onkeypress="this.oninput();" onclick="this.oninput();" onpaste="this.oninput();">
<img src="search_icon.svg" alt="Search" class="svg" onclick="mySearch(false)"></div>
<div id="search_results"></div><div class="toc_title"><a href="#top">Index of modules</a></div><ul></ul></nav></header>

<h1>Index of modules</h1>
<table>
<tbody><tr><td align="left"><br>A</td></tr>
<tr><td><a href="Arg.html">Arg</a> </td>
<td><div class="info">
Parsing of command line arguments.
</div>
</td></tr>
<tr><td><a href="Arg_helper.html">Arg_helper</a> </td>
<td><div class="info">
Decipher command line arguments of the form
        &lt;value&gt; | &lt;key&gt;=&lt;value&gt;<code class="code">,...</code>
    (as used for example for the specification of inlining parameters
    varying by simplification round).
</div>
</td></tr>
<tr><td><a href="Arith_status.html">Arith_status</a> </td>
<td><div class="info">
Flags that control rational arithmetic.
</div>
</td></tr>
<tr><td><a href="StdLabels.Array.html">Array</a> [<a href="StdLabels.html">StdLabels</a>]</td>
<td></td></tr>
<tr><td><a href="Array.html">Array</a> </td>
<td><div class="info">
Array operations.
</div>
</td></tr>
<tr><td><a href="Bigarray.Array1.html">Array1</a> [<a href="Bigarray.html">Bigarray</a>]</td>
<td><div class="info">
One-dimensional arrays.
</div>
</td></tr>
<tr><td><a href="Bigarray.Array2.html">Array2</a> [<a href="Bigarray.html">Bigarray</a>]</td>
<td><div class="info">
Two-dimensional arrays.
</div>
</td></tr>
<tr><td><a href="Bigarray.Array3.html">Array3</a> [<a href="Bigarray.html">Bigarray</a>]</td>
<td><div class="info">
Three-dimensional arrays.
</div>
</td></tr>
<tr><td><a href="ArrayLabels.html">ArrayLabels</a> </td>
<td><div class="info">
Array operations.
</div>
</td></tr>
<tr><td><a href="Ast_helper.html">Ast_helper</a> </td>
<td><div class="info">
Helpers to produce Parsetree fragments
</div>
</td></tr>
<tr><td><a href="Ast_invariants.html">Ast_invariants</a> </td>
<td><div class="info">
Check AST invariants
</div>
</td></tr>
<tr><td><a href="Ast_iterator.html">Ast_iterator</a> </td>
<td><div class="info">
<a href="Ast_iterator.html#TYPEiterator"><code class="code"><span class="constructor">Ast_iterator</span>.iterator</code></a> allows to implement AST inspection using open recursion.
</div>
</td></tr>
<tr><td><a href="Ast_mapper.html">Ast_mapper</a> </td>
<td><div class="info">
The interface of a -ppx rewriter
</div>
</td></tr>
<tr><td><a href="Asttypes.html">Asttypes</a> </td>
<td><div class="info">
Auxiliary AST types used by parsetree and typedtree.
</div>
</td></tr>
<tr><td><a href="Attr_helper.html">Attr_helper</a> </td>
<td><div class="info">
Helpers for attributes
</div>
</td></tr>
<tr><td align="left"><br>B</td></tr>
<tr><td><a href="Big_int.html">Big_int</a> </td>
<td><div class="info">
Operations on arbitrary-precision integers.
</div>
</td></tr>
<tr><td><a href="Bigarray.html">Bigarray</a> </td>
<td><div class="info">
Large, multi-dimensional, numerical arrays.
</div>
</td></tr>
<tr><td><a href="Buffer.html">Buffer</a> </td>
<td><div class="info">
Extensible buffers.
</div>
</td></tr>
<tr><td><a href="Builtin_attributes.html">Builtin_attributes</a> </td>
<td></td></tr>
<tr><td><a href="StdLabels.Bytes.html">Bytes</a> [<a href="StdLabels.html">StdLabels</a>]</td>
<td></td></tr>
<tr><td><a href="Bytes.html">Bytes</a> </td>
<td><div class="info">
Byte sequence operations.
</div>
</td></tr>
<tr><td><a href="BytesLabels.html">BytesLabels</a> </td>
<td><div class="info">
Byte sequence operations.
</div>
</td></tr>
<tr><td align="left"><br>C</td></tr>
<tr><td><a href="Callback.html">Callback</a> </td>
<td><div class="info">
Registering OCaml values with the C runtime.
</div>
</td></tr>
<tr><td><a href="CamlinternalFormat.html">CamlinternalFormat</a> </td>
<td></td></tr>
<tr><td><a href="CamlinternalFormatBasics.html">CamlinternalFormatBasics</a> </td>
<td><div class="info">
</div>
</td></tr>
<tr><td><a href="CamlinternalLazy.html">CamlinternalLazy</a> </td>
<td><div class="info">
Run-time support for lazy values.
</div>
</td></tr>
<tr><td><a href="CamlinternalMod.html">CamlinternalMod</a> </td>
<td><div class="info">
Run-time support for recursive modules.
</div>
</td></tr>
<tr><td><a href="CamlinternalOO.html">CamlinternalOO</a> </td>
<td><div class="info">
Run-time support for objects and classes.
</div>
</td></tr>
<tr><td><a href="Ccomp.html">Ccomp</a> </td>
<td></td></tr>
<tr><td><a href="Ast_helper.Cf.html">Cf</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Class fields
</div>
</td></tr>
<tr><td><a href="Char.html">Char</a> </td>
<td><div class="info">
Character operations.
</div>
</td></tr>
<tr><td><a href="Ast_helper.Ci.html">Ci</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Classes
</div>
</td></tr>
<tr><td><a href="Ast_helper.Cl.html">Cl</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Class expressions
</div>
</td></tr>
<tr><td><a href="Clflags.html">Clflags</a> </td>
<td><div class="info">
Optimization parameters represented as ints indexed by round number.
</div>
</td></tr>
<tr><td><a href="Misc.Color.html">Color</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td><a href="Complex.html">Complex</a> </td>
<td><div class="info">
Complex numbers.
</div>
</td></tr>
<tr><td><a href="Condition.html">Condition</a> </td>
<td><div class="info">
Condition variables to synchronize between threads.
</div>
</td></tr>
<tr><td><a href="Config.html">Config</a> </td>
<td></td></tr>
<tr><td><a href="Consistbl.html">Consistbl</a> </td>
<td></td></tr>
<tr><td><a href="Ast_helper.Const.html">Const</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td></td></tr>
<tr><td><a href="Ast_helper.Csig.html">Csig</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Class signatures
</div>
</td></tr>
<tr><td><a href="Ast_helper.Cstr.html">Cstr</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Class structures
</div>
</td></tr>
<tr><td><a href="Ast_helper.Ctf.html">Ctf</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Class type fields
</div>
</td></tr>
<tr><td><a href="Ast_helper.Cty.html">Cty</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Class type expressions
</div>
</td></tr>
<tr><td align="left"><br>D</td></tr>
<tr><td><a href="Depend.html">Depend</a> </td>
<td><div class="info">
Module dependencies.
</div>
</td></tr>
<tr><td><a href="Digest.html">Digest</a> </td>
<td><div class="info">
MD5 message digest.
</div>
</td></tr>
<tr><td><a href="Docstrings.html">Docstrings</a> </td>
<td><div class="info">
Documentation comments
</div>
</td></tr>
<tr><td><a href="Dynlink.html">Dynlink</a> </td>
<td><div class="info">
Dynamic loading of object files.
</div>
</td></tr>
<tr><td align="left"><br>E</td></tr>
<tr><td><a href="Obj.Ephemeron.html">Ephemeron</a> [<a href="Obj.html">Obj</a>]</td>
<td></td></tr>
<tr><td><a href="Ephemeron.html">Ephemeron</a> </td>
<td><div class="info">
Ephemerons and weak hash table
</div>
</td></tr>
<tr><td><a href="Event.html">Event</a> </td>
<td><div class="info">
First-class synchronous communication.
</div>
</td></tr>
<tr><td><a href="Ast_helper.Exp.html">Exp</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Expressions
</div>
</td></tr>
<tr><td align="left"><br>F</td></tr>
<tr><td><a href="Filename.html">Filename</a> </td>
<td><div class="info">
Operations on file names.
</div>
</td></tr>
<tr><td><a href="Numbers.Float.html">Float</a> [<a href="Numbers.html">Numbers</a>]</td>
<td></td></tr>
<tr><td><a href="Clflags.Float_arg_helper.html">Float_arg_helper</a> [<a href="Clflags.html">Clflags</a>]</td>
<td><div class="info">
Optimization parameters represented as floats indexed by round number.
</div>
</td></tr>
<tr><td><a href="Format.html">Format</a> </td>
<td><div class="info">
Pretty printing.
</div>
</td></tr>
<tr><td align="left"><br>G</td></tr>
<tr><td><a href="Gc.html">Gc</a> </td>
<td><div class="info">
Memory management control and statistics; finalised values.
</div>
</td></tr>
<tr><td><a href="Ephemeron.GenHashTable.html">GenHashTable</a> [<a href="Ephemeron.html">Ephemeron</a>]</td>
<td></td></tr>
<tr><td><a href="Bigarray.Genarray.html">Genarray</a> [<a href="Bigarray.html">Bigarray</a>]</td>
<td></td></tr>
<tr><td><a href="Genlex.html">Genlex</a> </td>
<td><div class="info">
A generic lexical analyzer.
</div>
</td></tr>
<tr><td><a href="Graphics.html">Graphics</a> </td>
<td><div class="info">
Machine-independent graphics primitives.
</div>
</td></tr>
<tr><td><a href="GraphicsX11.html">GraphicsX11</a> </td>
<td><div class="info">
Additional graphics primitives for the X Windows system.
</div>
</td></tr>
<tr><td align="left"><br>H</td></tr>
<tr><td><a href="MoreLabels.Hashtbl.html">Hashtbl</a> [<a href="MoreLabels.html">MoreLabels</a>]</td>
<td></td></tr>
<tr><td><a href="Hashtbl.html">Hashtbl</a> </td>
<td><div class="info">
Hash tables and hash functions.
</div>
</td></tr>
<tr><td align="left"><br>I</td></tr>
<tr><td><a href="Strongly_connected_components.S.Id.html">Id</a> [<a href="Strongly_connected_components.S.html">Strongly_connected_components.S</a>]</td>
<td></td></tr>
<tr><td><a href="Identifiable.html">Identifiable</a> </td>
<td><div class="info">
Uniform interface for common data structures over various things.
</div>
</td></tr>
<tr><td><a href="Ast_helper.Incl.html">Incl</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Includes
</div>
</td></tr>
<tr><td><a href="Numbers.Int.html">Int</a> [<a href="Numbers.html">Numbers</a>]</td>
<td></td></tr>
<tr><td><a href="Int32.html">Int32</a> </td>
<td><div class="info">
32-bit integers.
</div>
</td></tr>
<tr><td><a href="Int64.html">Int64</a> </td>
<td><div class="info">
64-bit integers.
</div>
</td></tr>
<tr><td><a href="Clflags.Int_arg_helper.html">Int_arg_helper</a> [<a href="Clflags.html">Clflags</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.Int_literal_converter.html">Int_literal_converter</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td align="left"><br>K</td></tr>
<tr><td><a href="Ephemeron.K1.html">K1</a> [<a href="Ephemeron.html">Ephemeron</a>]</td>
<td></td></tr>
<tr><td><a href="Ephemeron.K2.html">K2</a> [<a href="Ephemeron.html">Ephemeron</a>]</td>
<td></td></tr>
<tr><td><a href="Ephemeron.Kn.html">Kn</a> [<a href="Ephemeron.html">Ephemeron</a>]</td>
<td></td></tr>
<tr><td align="left"><br>L</td></tr>
<tr><td><a href="UnixLabels.LargeFile.html">LargeFile</a> [<a href="UnixLabels.html">UnixLabels</a>]</td>
<td><div class="info">
File operations on large files.
</div>
</td></tr>
<tr><td><a href="Unix.LargeFile.html">LargeFile</a> [<a href="Unix.html">Unix</a>]</td>
<td><div class="info">
File operations on large files.
</div>
</td></tr>
<tr><td><a href="Pervasives.LargeFile.html">LargeFile</a> [<a href="Pervasives.html">Pervasives</a>]</td>
<td><div class="info">
Operations on large files.
</div>
</td></tr>
<tr><td><a href="Lazy.html">Lazy</a> </td>
<td><div class="info">
Deferred computations.
</div>
</td></tr>
<tr><td><a href="Lexer.html">Lexer</a> </td>
<td></td></tr>
<tr><td><a href="Lexing.html">Lexing</a> </td>
<td><div class="info">
The run-time library for lexers generated by <code class="code">ocamllex</code>.
</div>
</td></tr>
<tr><td><a href="StdLabels.List.html">List</a> [<a href="StdLabels.html">StdLabels</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.Stdlib.List.html">List</a> [<a href="Misc.Stdlib.html">Misc.Stdlib</a>]</td>
<td></td></tr>
<tr><td><a href="List.html">List</a> </td>
<td><div class="info">
List operations.
</div>
</td></tr>
<tr><td><a href="ListLabels.html">ListLabels</a> </td>
<td><div class="info">
List operations.
</div>
</td></tr>
<tr><td><a href="Location.html">Location</a> </td>
<td><div class="info">
Source code locations (ranges of positions), used in parsetree.
</div>
</td></tr>
<tr><td><a href="Misc.LongString.html">LongString</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td><a href="Longident.html">Longident</a> </td>
<td><div class="info">
Long identifiers, used in parsetree.
</div>
</td></tr>
<tr><td align="left"><br>M</td></tr>
<tr><td><a href="Weak.Make.html">Make</a> [<a href="Weak.html">Weak</a>]</td>
<td><div class="info">
Functor building an implementation of the weak hash set structure.
</div>
</td></tr>
<tr><td><a href="Strongly_connected_components.Make.html">Make</a> [<a href="Strongly_connected_components.html">Strongly_connected_components</a>]</td>
<td></td></tr>
<tr><td><a href="Set.Make.html">Make</a> [<a href="Set.html">Set</a>]</td>
<td><div class="info">
Functor building an implementation of the set structure
   given a totally ordered type.
</div>
</td></tr>
<tr><td><a href="MoreLabels.Set.Make.html">Make</a> [<a href="MoreLabels.Set.html">MoreLabels.Set</a>]</td>
<td></td></tr>
<tr><td><a href="MoreLabels.Map.Make.html">Make</a> [<a href="MoreLabels.Map.html">MoreLabels.Map</a>]</td>
<td></td></tr>
<tr><td><a href="MoreLabels.Hashtbl.Make.html">Make</a> [<a href="MoreLabels.Hashtbl.html">MoreLabels.Hashtbl</a>]</td>
<td></td></tr>
<tr><td><a href="Map.Make.html">Make</a> [<a href="Map.html">Map</a>]</td>
<td><div class="info">
Functor building an implementation of the map structure
   given a totally ordered type.
</div>
</td></tr>
<tr><td><a href="Identifiable.Make.html">Make</a> [<a href="Identifiable.html">Identifiable</a>]</td>
<td></td></tr>
<tr><td><a href="Hashtbl.Make.html">Make</a> [<a href="Hashtbl.html">Hashtbl</a>]</td>
<td><div class="info">
Functor building an implementation of the hashtable structure.
</div>
</td></tr>
<tr><td><a href="Ephemeron.Kn.Make.html">Make</a> [<a href="Ephemeron.Kn.html">Ephemeron.Kn</a>]</td>
<td><div class="info">
Functor building an implementation of a weak hash table
</div>
</td></tr>
<tr><td><a href="Ephemeron.K2.Make.html">Make</a> [<a href="Ephemeron.K2.html">Ephemeron.K2</a>]</td>
<td><div class="info">
Functor building an implementation of a weak hash table
</div>
</td></tr>
<tr><td><a href="Ephemeron.K1.Make.html">Make</a> [<a href="Ephemeron.K1.html">Ephemeron.K1</a>]</td>
<td><div class="info">
Functor building an implementation of a weak hash table
</div>
</td></tr>
<tr><td><a href="Arg_helper.Make.html">Make</a> [<a href="Arg_helper.html">Arg_helper</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.MakeHooks.html">MakeHooks</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td><a href="MoreLabels.Hashtbl.MakeSeeded.html">MakeSeeded</a> [<a href="MoreLabels.Hashtbl.html">MoreLabels.Hashtbl</a>]</td>
<td></td></tr>
<tr><td><a href="Hashtbl.MakeSeeded.html">MakeSeeded</a> [<a href="Hashtbl.html">Hashtbl</a>]</td>
<td><div class="info">
Functor building an implementation of the hashtable structure.
</div>
</td></tr>
<tr><td><a href="Ephemeron.GenHashTable.MakeSeeded.html">MakeSeeded</a> [<a href="Ephemeron.GenHashTable.html">Ephemeron.GenHashTable</a>]</td>
<td><div class="info">
Functor building an implementation of an hash table that use the container
      for keeping the information given
</div>
</td></tr>
<tr><td><a href="Ephemeron.Kn.MakeSeeded.html">MakeSeeded</a> [<a href="Ephemeron.Kn.html">Ephemeron.Kn</a>]</td>
<td><div class="info">
Functor building an implementation of a weak hash table.
</div>
</td></tr>
<tr><td><a href="Ephemeron.K2.MakeSeeded.html">MakeSeeded</a> [<a href="Ephemeron.K2.html">Ephemeron.K2</a>]</td>
<td><div class="info">
Functor building an implementation of a weak hash table.
</div>
</td></tr>
<tr><td><a href="Ephemeron.K1.MakeSeeded.html">MakeSeeded</a> [<a href="Ephemeron.K1.html">Ephemeron.K1</a>]</td>
<td><div class="info">
Functor building an implementation of a weak hash table.
</div>
</td></tr>
<tr><td><a href="MoreLabels.Map.html">Map</a> [<a href="MoreLabels.html">MoreLabels</a>]</td>
<td></td></tr>
<tr><td><a href="Map.html">Map</a> </td>
<td><div class="info">
Association tables over ordered types.
</div>
</td></tr>
<tr><td><a href="Identifiable.S.Map.html">Map</a> [<a href="Identifiable.S.html">Identifiable.S</a>]</td>
<td></td></tr>
<tr><td><a href="Marshal.html">Marshal</a> </td>
<td><div class="info">
Marshaling of data structures.
</div>
</td></tr>
<tr><td><a href="Ast_helper.Mb.html">Mb</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Module bindings
</div>
</td></tr>
<tr><td><a href="Ast_helper.Md.html">Md</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Module declarations
</div>
</td></tr>
<tr><td><a href="Misc.html">Misc</a> </td>
<td><div class="info">
<code class="code">protect_refs&nbsp;l&nbsp;f</code> temporarily sets <code class="code">r</code> to <code class="code">v</code> for each <code class="code"><span class="constructor">R</span>&nbsp;(r,&nbsp;v)</code> in <code class="code">l</code>
    while executing <code class="code">f</code>.
</div>
</td></tr>
<tr><td><a href="Ast_helper.Mod.html">Mod</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Module expressions
</div>
</td></tr>
<tr><td><a href="MoreLabels.html">MoreLabels</a> </td>
<td><div class="info">
Extra labeled libraries.
</div>
</td></tr>
<tr><td><a href="Ast_helper.Mtd.html">Mtd</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Module type declarations
</div>
</td></tr>
<tr><td><a href="Ast_helper.Mty.html">Mty</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Module type expressions
</div>
</td></tr>
<tr><td><a href="Mutex.html">Mutex</a> </td>
<td><div class="info">
Locks for mutual exclusion.
</div>
</td></tr>
<tr><td align="left"><br>N</td></tr>
<tr><td><a href="Nativeint.html">Nativeint</a> </td>
<td><div class="info">
Processor-native integers.
</div>
</td></tr>
<tr><td><a href="Num.html">Num</a> </td>
<td><div class="info">
Operation on arbitrary-precision numbers.
</div>
</td></tr>
<tr><td><a href="Numbers.html">Numbers</a> </td>
<td><div class="info">
Modules about numbers that satisfy <code class="code"><span class="constructor">Identifiable</span>.<span class="constructor">S</span></code>.
</div>
</td></tr>
<tr><td align="left"><br>O</td></tr>
<tr><td><a href="Obj.html">Obj</a> </td>
<td><div class="info">
Operations on internal representations of values.
</div>
</td></tr>
<tr><td><a href="Oo.html">Oo</a> </td>
<td><div class="info">
Operations on objects
</div>
</td></tr>
<tr><td><a href="Ast_helper.Opn.html">Opn</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Opens
</div>
</td></tr>
<tr><td><a href="Misc.Stdlib.Option.html">Option</a> [<a href="Misc.Stdlib.html">Misc.Stdlib</a>]</td>
<td></td></tr>
<tr><td align="left"><br>P</td></tr>
<tr><td><a href="Identifiable.Pair.html">Pair</a> [<a href="Identifiable.html">Identifiable</a>]</td>
<td></td></tr>
<tr><td><a href="Parse.html">Parse</a> </td>
<td><div class="info">
Entry points in the parser
</div>
</td></tr>
<tr><td><a href="Parser.html">Parser</a> </td>
<td></td></tr>
<tr><td><a href="Parsetree.html">Parsetree</a> </td>
<td><div class="info">
Abstract syntax tree produced by parsing
</div>
</td></tr>
<tr><td><a href="Parsing.html">Parsing</a> </td>
<td><div class="info">
The run-time library for parsers generated by <code class="code">ocamlyacc</code>.
</div>
</td></tr>
<tr><td><a href="Ast_helper.Pat.html">Pat</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Patterns
</div>
</td></tr>
<tr><td><a href="Pervasives.html">Pervasives</a> </td>
<td><div class="info">
The initially opened module.
</div>
</td></tr>
<tr><td><a href="Pprintast.html">Pprintast</a> </td>
<td></td></tr>
<tr><td><a href="Printast.html">Printast</a> </td>
<td></td></tr>
<tr><td><a href="Printexc.html">Printexc</a> </td>
<td><div class="info">
Facilities for printing exceptions and inspecting current call stack.
</div>
</td></tr>
<tr><td><a href="Printf.html">Printf</a> </td>
<td><div class="info">
Formatted output functions.
</div>
</td></tr>
<tr><td align="left"><br>Q</td></tr>
<tr><td><a href="Queue.html">Queue</a> </td>
<td><div class="info">
First-in first-out queues.
</div>
</td></tr>
<tr><td align="left"><br>R</td></tr>
<tr><td><a href="Random.html">Random</a> </td>
<td><div class="info">
Pseudo-random number generators (PRNG).
</div>
</td></tr>
<tr><td><a href="Ratio.html">Ratio</a> </td>
<td><div class="info">
Operation on rational numbers.
</div>
</td></tr>
<tr><td align="left"><br>S</td></tr>
<tr><td><a href="Scanf.html">Scanf</a> </td>
<td><div class="info">
Formatted input functions.
</div>
</td></tr>
<tr><td><a href="Scanf.Scanning.html">Scanning</a> [<a href="Scanf.html">Scanf</a>]</td>
<td></td></tr>
<tr><td><a href="Spacetime.Series.html">Series</a> [<a href="Spacetime.html">Spacetime</a>]</td>
<td></td></tr>
<tr><td><a href="Set.html">Set</a> </td>
<td><div class="info">
Sets over ordered types.
</div>
</td></tr>
<tr><td><a href="MoreLabels.Set.html">Set</a> [<a href="MoreLabels.html">MoreLabels</a>]</td>
<td></td></tr>
<tr><td><a href="Identifiable.S.Set.html">Set</a> [<a href="Identifiable.S.html">Identifiable.S</a>]</td>
<td></td></tr>
<tr><td><a href="Ast_helper.Sig.html">Sig</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Signature items
</div>
</td></tr>
<tr><td><a href="Printexc.Slot.html">Slot</a> [<a href="Printexc.html">Printexc</a>]</td>
<td></td></tr>
<tr><td><a href="Spacetime.Snapshot.html">Snapshot</a> [<a href="Spacetime.html">Spacetime</a>]</td>
<td></td></tr>
<tr><td><a href="Sort.html">Sort</a> </td>
<td><div class="info">
<span class="deprecated">Sorting and merging lists.
</span></div>
</td></tr>
<tr><td><a href="Spacetime.html">Spacetime</a> </td>
<td><div class="info">
Profiling of a program's space behaviour over time.
</div>
</td></tr>
<tr><td><a href="Stack.html">Stack</a> </td>
<td><div class="info">
Last-in first-out stacks.
</div>
</td></tr>
<tr><td><a href="Random.State.html">State</a> [<a href="Random.html">Random</a>]</td>
<td></td></tr>
<tr><td><a href="StdLabels.html">StdLabels</a> </td>
<td><div class="info">
Standard labeled libraries.
</div>
</td></tr>
<tr><td><a href="Misc.Stdlib.html">Stdlib</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td><a href="Str.html">Str</a> </td>
<td><div class="info">
Regular expressions and high-level string processing
</div>
</td></tr>
<tr><td><a href="Ast_helper.Str.html">Str</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Structure items
</div>
</td></tr>
<tr><td><a href="Stream.html">Stream</a> </td>
<td><div class="info">
Streams and parsers.
</div>
</td></tr>
<tr><td><a href="String.html">String</a> </td>
<td><div class="info">
String operations.
</div>
</td></tr>
<tr><td><a href="StdLabels.String.html">String</a> [<a href="StdLabels.html">StdLabels</a>]</td>
<td></td></tr>
<tr><td><a href="StringLabels.html">StringLabels</a> </td>
<td><div class="info">
String operations.
</div>
</td></tr>
<tr><td><a href="Misc.StringMap.html">StringMap</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td><a href="Depend.StringMap.html">StringMap</a> [<a href="Depend.html">Depend</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.StringSet.html">StringSet</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td><a href="Depend.StringSet.html">StringSet</a> [<a href="Depend.html">Depend</a>]</td>
<td></td></tr>
<tr><td><a href="Strongly_connected_components.html">Strongly_connected_components</a> </td>
<td><div class="info">
Kosaraju's algorithm for strongly connected components.
</div>
</td></tr>
<tr><td><a href="Syntaxerr.html">Syntaxerr</a> </td>
<td><div class="info">
Auxiliary type for reporting syntax errors
</div>
</td></tr>
<tr><td><a href="Sys.html">Sys</a> </td>
<td><div class="info">
System interface.
</div>
</td></tr>
<tr><td align="left"><br>T</td></tr>
<tr><td><a href="Identifiable.S.T.html">T</a> [<a href="Identifiable.S.html">Identifiable.S</a>]</td>
<td></td></tr>
<tr><td><a href="Tbl.html">Tbl</a> </td>
<td></td></tr>
<tr><td><a href="Identifiable.S.Tbl.html">Tbl</a> [<a href="Identifiable.S.html">Identifiable.S</a>]</td>
<td></td></tr>
<tr><td><a href="Ast_helper.Te.html">Te</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Type extensions
</div>
</td></tr>
<tr><td><a href="Terminfo.html">Terminfo</a> </td>
<td></td></tr>
<tr><td><a href="Thread.html">Thread</a> </td>
<td><div class="info">
Lightweight threads for Posix <code class="code">1003.1c</code> and Win32.
</div>
</td></tr>
<tr><td><a href="ThreadUnix.html">ThreadUnix</a> </td>
<td><div class="info">
<span class="deprecated">Thread-compatible system calls.
</span></div>
</td></tr>
<tr><td><a href="Timings.html">Timings</a> </td>
<td><div class="info">
Compiler performance recording
</div>
</td></tr>
<tr><td><a href="Ast_helper.Typ.html">Typ</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Type expressions
</div>
</td></tr>
<tr><td><a href="Ast_helper.Type.html">Type</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Type declarations
</div>
</td></tr>
<tr><td align="left"><br>U</td></tr>
<tr><td><a href="Uchar.html">Uchar</a> </td>
<td><div class="info">
Unicode characters.
</div>
</td></tr>
<tr><td><a href="Unix.html">Unix</a> </td>
<td><div class="info">
Interface to the Unix system.
</div>
</td></tr>
<tr><td><a href="UnixLabels.html">UnixLabels</a> </td>
<td><div class="info">
Interface to the Unix system.
</div>
</td></tr>
<tr><td align="left"><br>V</td></tr>
<tr><td><a href="Ast_helper.Val.html">Val</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Value declarations
</div>
</td></tr>
<tr><td><a href="Ast_helper.Vb.html">Vb</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
Value bindings
</div>
</td></tr>
<tr><td align="left"><br>W</td></tr>
<tr><td><a href="Warnings.html">Warnings</a> </td>
<td></td></tr>
<tr><td><a href="Weak.html">Weak</a> </td>
<td><div class="info">
Arrays of weak pointers and hash sets of weak pointers.
</div>
</td></tr>
</tbody></table>

<div class="copyright">The present documentation is copyright Institut National de Recherche en Informatique et en Automatique (INRIA). A complete version can be obtained from <a href="http://caml.inria.fr/pub/docs/manual-ocaml/">this page</a>.</div></div>